--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garn og slikt</title>
+    <title>Garn og Slikt</title>
     <link rel="stylesheet" href="./styles.css">
     <!-- Lightwidget Instagram feed-->
     <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
